# dune-xt-data

./: .gitignore  .gitsuper  .mailmap  .pylicense-cpp.cfg  .pylicense-cpp.py  .pylicense-other.cfg  .pylicense-other.py  .travis.after_script.bash  .travis.make_env_file.py  .travis.script.bash  .travis.test_python.bash  .travis.yml  CMakeLists.txt  LICENSE  README.md  config.h.cmake  dune-xt-data.pc.in  dune.module
.ci/azure/: pipelines.yml
cmake/modules/: CMakeLists.txt  DuneXtDataMacros.cmake  FindClangFormat.cmake
dune/xt/data/: CMakeLists.txt  coordinates.hh  disable_warnings.hh  location.hh  paths.cc  paths.hh  quadratures.hh  spherical_quadratures.hh
dune/xt/data/gausslobatto/: CMakeLists.txt  gausslobatto_data.hh
dune/xt/data/gausslobatto/data/: formatfiles.sh  gausslobatto10.cxx  gausslobatto10.txt  gausslobatto100.cxx  gausslobatto100.txt  gausslobatto11.cxx  gausslobatto11.txt  gausslobatto12.cxx  gausslobatto12.txt  gausslobatto13.cxx  gausslobatto13.txt  gausslobatto14.cxx  gausslobatto14.txt  gausslobatto15.cxx  gausslobatto15.txt  gausslobatto16.cxx  gausslobatto16.txt  gausslobatto17.cxx  gausslobatto17.txt  gausslobatto18.cxx  gausslobatto18.txt  gausslobatto19.cxx  gausslobatto19.txt  gausslobatto2.cxx  gausslobatto2.txt  gausslobatto20.cxx  gausslobatto20.txt  gausslobatto21.cxx  gausslobatto21.txt  gausslobatto22.cxx  gausslobatto22.txt  gausslobatto23.cxx  gausslobatto23.txt  gausslobatto24.cxx  gausslobatto24.txt  gausslobatto25.cxx  gausslobatto25.txt  gausslobatto26.cxx  gausslobatto26.txt  gausslobatto27.cxx  (+160 more)
dune/xt/data/lebedev/: CMakeLists.txt  lebedev_data.hh
dune/xt/data/lebedev/data/: order_101.cxx  order_107.cxx  order_11.cxx  order_113.cxx  order_119.cxx  order_125.cxx  order_13.cxx  order_131.cxx  order_15.cxx  order_17.cxx  order_19.cxx  order_21.cxx  order_23.cxx  order_25.cxx  order_27.cxx  order_29.cxx  order_3.cxx  order_31.cxx  order_35.cxx  order_41.cxx  order_47.cxx  order_5.cxx  order_53.cxx  order_59.cxx  order_65.cxx  order_7.cxx  order_71.cxx  order_77.cxx  order_83.cxx  order_89.cxx  order_9.cxx  order_95.cxx
dune/xt/data/matrix_exponential/: CMakeLists.txt  c8lib.cpp  c8lib.hpp  install.sh  matrix_exponential.cpp  matrix_exponential.hpp  matrix_exponential_extension.cpp  matrix_exponential_extension.hpp  r8lib.cpp  r8lib.hpp
dune/xt/data/octant_quadrature/: CMakeLists.txt  octant_quadrature_data.hh
dune/xt/data/octant_quadrature/data/: order_10.cxx  order_11.cxx  order_12.cxx  order_13.cxx  order_14.cxx  order_15.cxx  order_16.cxx  order_17.cxx  order_18.cxx  order_19.cxx  order_2.cxx  order_20.cxx  order_21.cxx  order_22.cxx  order_23.cxx  order_24.cxx  order_25.cxx  order_26.cxx  order_27.cxx  order_28.cxx  order_29.cxx  order_3.cxx  order_30.cxx  order_31.cxx  order_32.cxx  order_33.cxx  order_34.cxx  order_35.cxx  order_36.cxx  order_37.cxx  order_38.cxx  order_39.cxx  order_4.cxx  order_40.cxx  order_41.cxx  order_42.cxx  order_43.cxx  order_44.cxx  order_45.cxx  order_46.cxx  (+29 more)
dune/xt/data/quadratures/: CMakeLists.txt  fekete.hh  gausslobatto.hh  merged.hh
dune/xt/data/quadratures/fekete/: CMakeLists.txt  fekete.cc  fekete.hh  triangle_fekete_rule.cpp  triangle_fekete_rule.hpp
dune/xt/data/quadratures/gausslobatto/: CMakeLists.txt  gausslobatto_data.hh
dune/xt/data/quadratures/gausslobatto/data/: gausslobatto10.cxx  gausslobatto100.cxx  gausslobatto11.cxx  gausslobatto12.cxx  gausslobatto13.cxx  gausslobatto14.cxx  gausslobatto15.cxx  gausslobatto16.cxx  gausslobatto17.cxx  gausslobatto18.cxx  gausslobatto19.cxx  gausslobatto2.cxx  gausslobatto20.cxx  gausslobatto21.cxx  gausslobatto22.cxx  gausslobatto23.cxx  gausslobatto24.cxx  gausslobatto25.cxx  gausslobatto26.cxx  gausslobatto27.cxx  gausslobatto28.cxx  gausslobatto29.cxx  gausslobatto3.cxx  gausslobatto30.cxx  gausslobatto31.cxx  gausslobatto32.cxx  gausslobatto33.cxx  gausslobatto34.cxx  gausslobatto35.cxx  gausslobatto36.cxx  gausslobatto37.cxx  gausslobatto38.cxx  gausslobatto39.cxx  gausslobatto4.cxx  gausslobatto40.cxx  gausslobatto41.cxx  gausslobatto42.cxx  gausslobatto43.cxx  gausslobatto44.cxx  gausslobatto45.cxx  (+59 more)
dune/xt/data/spherical_quadratures/: CMakeLists.txt  lebedev.hh  merged.hh  octant.hh  product.hh
dune/xt/data/spherical_quadratures/lebedev/: CMakeLists.txt  lebedev_data.hh
dune/xt/data/spherical_quadratures/lebedev/data/: order_101.cxx  order_107.cxx  order_11.cxx  order_113.cxx  order_119.cxx  order_125.cxx  order_13.cxx  order_131.cxx  order_15.cxx  order_17.cxx  order_19.cxx  order_21.cxx  order_23.cxx  order_25.cxx  order_27.cxx  order_29.cxx  order_3.cxx  order_31.cxx  order_35.cxx  order_41.cxx  order_47.cxx  order_5.cxx  order_53.cxx  order_59.cxx  order_65.cxx  order_7.cxx  order_71.cxx  order_77.cxx  order_83.cxx  order_89.cxx  order_9.cxx  order_95.cxx
dune/xt/data/spherical_quadratures/octant_quadrature/: CMakeLists.txt  octant_quadrature_data.hh
dune/xt/data/spherical_quadratures/octant_quadrature/data/: order_10.cxx  order_11.cxx  order_12.cxx  order_13.cxx  order_14.cxx  order_15.cxx  order_16.cxx  order_17.cxx  order_18.cxx  order_19.cxx  order_2.cxx  order_20.cxx  order_21.cxx  order_22.cxx  order_23.cxx  order_24.cxx  order_25.cxx  order_26.cxx  order_27.cxx  order_28.cxx  order_29.cxx  order_3.cxx  order_30.cxx  order_31.cxx  order_32.cxx  order_33.cxx  order_34.cxx  order_35.cxx  order_36.cxx  order_37.cxx  order_38.cxx  order_39.cxx  order_4.cxx  order_40.cxx  order_41.cxx  order_42.cxx  order_43.cxx  order_44.cxx  order_45.cxx  order_46.cxx  (+29 more)
dune/xt/data/test/: CMakeLists.txt  main.hxx  paths.cc  quadratures.cc  spherical_quadratures.cc
dune/xt/data/test/gtest/: gtest-all.cxx
python/: .gitignore  CMakeLists.txt  setup.cfg  setup.py  setup.py.in
python/dune/: CMakeLists.txt  __init__.py
python/dune/xt/: CMakeLists.txt
python/dune/xt/data/: CMakeLists.txt  _paths.cc  paths.py
python/test/: base.py  dummy.py
